--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,13 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+
+
+Animations/
+Assets/
+Effects/
+Materials/
+Models/
+Scenes/
+Settings/
